--- a/staff/groups/le-sky-martini-inc/memefy/components/feedback/index.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/feedback/index.sass
@@ -1,6 +1,11 @@
 .feedback
+    @extend %main-content-box 
+    margin-bottom: 2em
+    font-size: 16px
+
     &--error
-        color: red
+        background-color: $error-bg-color
+        color: $secondary-text-color
     &--warn
         background-color: yellow
     &--success
