--- a/staff/groups/le-sky-martini-inc/memefy/style/index.css
+++ b/staff/groups/le-sky-martini-inc/memefy/style/index.css
@@ -1,7 +1,7 @@
 * {
-  border: 1px dotted deeppink;
   padding: 10px;
   margin: 10px;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 .feedback--error {
